# vopet-backend

./: .flake8  .gitignore  Dockerfile  Makefile  Pipfile  manage.py  pyproject.toml  runserver.sh  schema.graphql
answers/: models.py  schema.py
answers/migrations/: 0001_initial.py  0002_auto_20200703_0623.py  0003_answer_user.py
questions/: models.py  schema.py
questions/migrations/: 0001_initial.py  0002_auto_20200703_0544.py  0003_auto_20200703_0623.py
subjects/: models.py  schema.py
subjects/migrations/: 0001_initial.py
users/: backends.py  decorators.py  exceptions.py  middleware.py  schema.py  utils.py
vopet/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
